cloudformation/template.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: Create an ALB, Target Group, Security Groups and an EC2 instance with a user data script

Parameters:
  InstanceType:
    Description: WebServer EC2 instance type
    Type: String
    Default: t2.medium
    AllowedValues:
      - t2.micro
      - t2.small
      - t2.medium
      - m5.large
    ConstraintDescription: must be a valid EC2 instance type. Please don't use T instance in Product.

  LatestAmiId:
    Description: AMI for EC2 Instance （Ubuntu 22.04)
    Type: String
    Default: 'ami-080e1f13689e07408'

  OpenSearchCollectionARN:
    Description: OpenSearch Collection for write access log
    Type: String
    Default: ''

  KeyPairName:
    Description: Key pair name
    Type: AWS::EC2::KeyPair::KeyName

  VpcId:
    Description: Select an existing VPC
    Type: AWS::EC2::VPC::Id

  PublicSubnet1:
    Description: Select an existing public subnet
    Type: AWS::EC2::Subnet::Id

  PublicSubnet2:
    Description: Select another existing public subnet
    Type: AWS::EC2::Subnet::Id

Resources:

  ALBSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow http to ALB
      VpcId: !Ref 'VpcId'
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0

  EC2SecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow http from ALB and SSH
      VpcId: !Ref 'VpcId'
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 5000
          ToPort: 5000
          SourceSecurityGroupId: !Ref 'ALBSecurityGroup'
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0

  ALB:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      SecurityGroups:
        - !Ref 'ALBSecurityGroup'
      Subnets:
        - !Ref 'PublicSubnet1'
        - !Ref 'PublicSubnet2'

  ALBListener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      DefaultActions:
        - Type: forward
          TargetGroupArn: !Ref 'ALBTargetGroup'
      LoadBalancerArn: !Ref 'ALB'
      Port: 80
      Protocol: HTTP # 添加 Protocol 属性

  ALBTargetGroup:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      HealthCheckPath: /
      HealthCheckPort: 5000
      Port: 5000
      Protocol: HTTP
      TargetType: instance
      VpcId: !Ref 'VpcId'
      Targets:
        - Id:
            Ref: EC2Instance
  EC2Role:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: '2012-10-17'
        Statement:
          - Effect: Allow
            Principal:
              Service: ec2.amazonaws.com
            Action: 'sts:AssumeRole'
      ManagedPolicyArns:
        - arn:aws:iam::aws:policy/AmazonEC2ReadOnlyAccess
      Policies:
        - PolicyName: BedrockAgentAccess
          PolicyDocument:
            Version: '2012-10-17'
            Statement:
              - Effect: Allow
                Action:
                  - 'bedrock:*'
                Resource: '*'
        - PolicyName: OpenSearchCollectionIndexOperation
          PolicyDocument:
            Version: '2012-10-17'
            Statement:
              - Effect: Allow
                Action:
                  - 'aoss:APIAccessAll'
                Resource:
                  - !Ref 'OpenSearchCollectionARN'

  EC2InstanceProfile:
    Type: AWS::IAM::InstanceProfile
    Properties:
      Roles:
        - !Ref EC2Role

  EC2Instance:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: !Ref 'LatestAmiId'
      InstanceType: !Ref 'InstanceType'
      SecurityGroupIds:
        - !Ref 'EC2SecurityGroup'
      SubnetId: !Ref 'PublicSubnet1'
      KeyName: !Ref 'KeyPairName'
      IamInstanceProfile: !Ref EC2InstanceProfile
      BlockDeviceMappings:
        - DeviceName: /dev/sda1
          Ebs:
            VolumeType: gp3
      UserData:
        Fn::Base64:
          !Sub |
          #!/bin/bash
          apt-get update
          apt-get install -y git python3-pip python3.10-venv npm yarn
          
          

          git clone https://github.com/nimysan/ai-frontend.git
          cd ai-frontend
          chmod a+x install-ui.sh && ./install-ui.sh

          git clone https://github.com/nimysan/AIServer.git
          cd ../AIServer
          chmod a+x start_server.sh && ./start_server.sh

Outputs:

  ALBDNSName:
    Description: DNS Name of the ALB
    Value: !GetAtt 'ALB.DNSName'
    Export:
      Name: ALBDNSName
